# minimal

./: Cargo.toml  README.md
src/: camera.rs  main.rs
src/app_state/: transition.rs
src/camera/: main_cam.rs
