[package]
name = "minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_config_cam = "0.3.0"
bevy_rapier3d = "0.15.0"
iyes_loopless = "0.6.1"
rand = "0.8.5"
dolly = "0.3.1"
glam = "0.21.2"
bevy_app = "0.7.0"  
bevy_core = "0.7.0"
bevy_ecs = "0.7.0"
bevy_input = "0.7.0"
bevy_flycam = "0.7.0"